@@ -46,6 +46,7 @@
   page tree dropdowns.
 * Fixed a bug where Django Compressor could not be used on the sekizai ``js``
   block.
+* Fixed an encoding error when running the ``publisher-publish`` command.
 
 
 === 3.3.0 (2016-05-26) ===
